--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,10 @@
     float: top;
     color: white;
     text-align: center;
-    padding: 14px 18px;
+    padding: 14px 24px;
     text-decoration: none;
-    font-size: 18px;
-
+    font-size: 20px;
+    margin: 0;
 }
 
 .navbar a:hover {
@@ -21,9 +21,4 @@
 .navbar a.active {
     background-color: red;
     color: white;
-}
-
-.banner-img {
-    width: 100%;
-    height: 10%;
 }
