--- a/css/styles.css
+++ b/css/styles.css
@@ -31,3 +31,25 @@
     float: right;
     height: 100%;
 }
+
+.center-text {
+    text-align: center;
+    margin: auto;
+    padding: 5%;
+    background-color: lightgrey;
+    width: 60%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.p {
+    text-align: left;
+    width: 60%;
+}
+
+.forsideBillede1 {
+    float: right;
+    width: 40%;
+    height: 40%;
+    margin: auto;
+    padding-left: 20px;
+}
+
