--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,6 @@
 }
 
 .center-text {
-    text-align: center;
     margin: auto;
     padding: 5%;
     background-color: lightgrey;
@@ -49,7 +48,10 @@
     float: right;
     width: 40%;
     height: 40%;
-    margin: auto;
     padding-left: 20px;
+}
+
+.h1 {
+    text-align: center;
 }
 
