--- a/css/styles.css
+++ b/css/styles.css
@@ -55,3 +55,15 @@
     text-align: center;
 }
 
+.logoBillede {
+    width: 7%;
+    height: 7%;
+    float: left;
+}
+
+footer {
+    width: 100%;
+    background-color: cadetblue;
+    padding: 0;
+    margin: 0;
+}
