--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@
 .center-text {
     margin: auto;
     padding: 1%;
-    background-color: whitesmoke;
+    background-color: lightgrey;
     width: 60%;
     font-family: Arial, Helvetica, sans-serif;
     padding-bottom: 10%;
