--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,9 @@
     position: sticky;
     position: -webkit-sticky; /* Til safari brugere*/
 }
-
+p {
+    font-family: Arial, Helvetica, sans-serif;
+}
 .navbar-li a {
     float: left;
     color: white;
@@ -92,4 +94,5 @@ h1 {
 .footer-element2 {
     padding-left: 40%;
 }
+
 
