--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ p {
 }
 
 .navbar-li a:hover {
-    background-color: grey;
+    background-color: lightgray;
     color: white;
 }
 
@@ -43,7 +43,7 @@ p {
 .center-text {
     margin: auto;
     padding: 1%;
-    background-color: lightgrey;
+    background-color: #F1F1F1;
     width: 60%;
     font-family: Arial, Helvetica, sans-serif;
     padding-bottom: 10%;
@@ -61,6 +61,14 @@ p {
 }
 
 h1 {
+    text-align: center;
+}
+
+h3 {
+    text-align: center;
+}
+
+.mail {
     text-align: center;
 }
 
@@ -115,6 +123,29 @@ h1 {
     width: 30%;
     padding-left:0%;
     display: table-cell;
-
 }
+
+
+
+
+/* slideshow  */
+@keyframes slideshow {
+    10% {left: 0;}
+    20% {left: 0;}
+    30% {left: -100%;}
+    40% {left: -100%;}
+    50% {left: -200%;}
+    60% {left: -200%;}
+    70% {left: -300%;}
+    80% {left: -300%;}
+    90% {left: -400%;}
+    100% {left: -400%}
+}
+
+
+#slider{overflow:hidden;width:50%;margin:5px auto; border: 5px solid transparent;border-radius: 10px;}
+#slider figure img{width:20%;float:left;}
+#slider figure{position:relative;width:500%;margin:0;left:0;text-align:left;animation:20s slideshow infinite}
+
+@media screen and (max-width: 767px) {#slider {overflow: hidden; width: 100%; margin: 0 auto;}}
 
