--- a/css/user-styles.css
+++ b/css/user-styles.css
@@ -41,3 +41,11 @@
     margin: auto;
     padding-top: 5%;
 }
+
+table {
+    border-collapse: collapse;
+}
+table tr td {
+    border: 1px solid #000;
+    padding: 10px;
+}
