--- a/views/user/book-board.ejs
+++ b/views/user/book-board.ejs
@@ -43,7 +43,7 @@
         <button type="submit">Book</button>
     </form>
     <div class="booked-boards">
-        <h2>Mine Bookede Boards</h2>
+        <h2>Mine Aktuelle Bookede Boards</h2>
         <table>
             <tr>
                 <th>
