Har lavet så admin kan slette, redigere beskrivelse og ledighed på boards

--- a/views/admin/nav.ejs
+++ b/views/admin/nav.ejs
@@ -1,9 +1,14 @@
 <ul class="navbar">
     <li class="navbar-li">
+        <a class="nav-item" href="/user/dashboard">User Dashboard</a>
+    </li>
+    <li class="navbar-li">
         <a class="nav-item" href="/admin">Dashboard</a>
     </li>
     <li class="navbar-li">
         <a class="nav-item" href="/admin/opret-board">Opret Board</a>
     </li>
-
+    <li class="navbar-li">
+        <a class="nav-item" href="/admin/rediger-board">Rediger Board</a>
+    </li>
 </ul>
