Liste over bookinger og bruger som administrator tilføjet

--- a/views/admin/nav.ejs
+++ b/views/admin/nav.ejs
@@ -11,4 +11,10 @@
     <li class="navbar-li">
         <a class="nav-item" href="/admin/rediger-board">Rediger Board</a>
     </li>
+    <li class="navbar-li">
+        <a class="nav-item" href="/admin/bruger-liste">Brugere</a>
+    </li>
+    <li class="navbar-li">
+        <a class="nav-item" href="/admin/booking-liste">Bookinger</a>
+    </li>
 </ul>
